// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.pms.contracts.interrupts;

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

import "io/harness/pms/contracts/interrupts/interrupt_config.proto";
import "io/harness/pms/contracts/interrupts/interrupt_type.proto";

message InterruptEffectProto {
  string interruptId = 1;
  google.protobuf.Timestamp tookEffectAt = 2;
  interrupts.InterruptType interruptType = 3;
  InterruptConfig interruptConfig = 4;
}
